<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="org.lovepeaceharmony.androidapp.ui.activity.LoginDetailActivity">

        <include layout="@layout/login_header" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_chevron_left_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/sign_in_with_email"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/top_bar_orange"
            style="@style/OpenSansSemiBoldTextViewStyle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/line_divider" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_an_account"
            android:textColor="@android:color/black"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
